--- a/customizations/organization/15493/Progroup Translation/06_IT/Extern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Extern/bookingportal.css
@@ -48,8 +48,15 @@
 	font-size:14px;
 }
 
-.customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
+.customization3_edit-booking_header_days-to-go:before {
     content:"ANCORA";
+    font-size: 14px;
+    padding-right: 7px
+    
+}
+
+.customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
+    content:"GIORNI";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
