--- a/customizations/organization/15493/Progroup Translation/06_IT/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Extern/page2.css
@@ -158,12 +158,12 @@ vv-questions .customization2_attendee-state_edit .customization2_attendee_furthe
     font-size: 14px;
 }
 
-vv-questions .customization2_attendee-state_edit .customization2_attendee-1 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
+.customization2_attendee-1 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
     content: "Telefono (opzionale)";
     font-size: 14px;
 }
 
-vv-questions .customization2_attendee-state_edit .customization2_attendee-1 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:before{
+.customization2_attendee-1 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:before{
     content: "Ho bisogno di un transfer all’albergo";
     font-size: 14px;
 }
