--- a/customizations/organization/15493/Progroup Translation/04_EN/Extern/bookingportal.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Extern/bookingportal.css
@@ -49,7 +49,7 @@
 }
 
 .customization3_edit-booking_header_days-to-go vv-text:nth-of-type(1):after{
-    content:"xxx DAYS TO GO";
+    content:"DAYS TO GO";
     text-indent: 0;
 	line-height: normal;
 	font-size:14px;
