--- a/customizations/organization/15493/Progroup Translation/07_PL/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Extern/page2.css
@@ -30,8 +30,8 @@
 .customization2_attendee_edit-action_save,
 .customization2_attendee_edit-action_cancel,
 .customization-button-previous,
-vv-questions .customization2_attendee_further-data_custom-question_label,
-vv-questions .customization2_attendee_further-data_custom-question_label *,
+vv-questions .customization2_attendee-state_edit .customization2_attendee_further-data_custom-question_label,
+vv-questions .customization2_attendee-state_edit .customization2_attendee_further-data_custom-question_label *,
 .customization2_booking-terms_custom-term,
 .customization2_booking-terms_text,
 .weitereAngabenTeilnehmer p,
