--- a/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/04_EN/Intern/page2.css
@@ -258,7 +258,7 @@ vv-questions .customization2_attendee-state_edit.customization2_attendee-2 .cust
 }
 
 .customization2_booking-terms_text:after {
-    content: "I have noted that the event will be conducted in accordance with the coronavirus regulations that apply in the state of Saxony at the time of the event. I will ensure that I can present all the certificates that are required on the day of the event.";
+    content: "I accept the following terms:";
     font-size: 14px
 }
 
