--- a/customizations/organization/15493/Progroup Translation/06_IT/Extern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Extern/page2.css
@@ -199,7 +199,7 @@ vv-questions .customization2_attendee-state_edit.customization2_attendee-2 .cust
 }
 
 vv-questions .customization2_attendee-state_edit .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "Menù di pesce";
+    content: "Menù di carne";
     font-size: 14px;
 }
 
@@ -239,7 +239,7 @@ vv-questions .customization2_attendee-state_edit.customization2_attendee-2 .cust
 }
 
 vv-questions .customization2_attendee-state_edit.customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "Menù di pesce";
+    content: "Menù di carne";
     font-size: 14px;
 }
 
